5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1795_3123.log
== TEST (2019-05-30 16:14:41) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
while(i<size(x)):
	a=sum(x)/size(x)
	i+=1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:17) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
while(i<size(x)):
	m=(x[i])**(-1)
	
	i+=1
print(round(a,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:20) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
while(i<size(x)):
	m=(x[i])**(-1)
	
	i+=1
print(round(a,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:31) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
while(i<size(x)):
	m=(x[i])**(-1)
	a=m/size(x)
	i+=1
print(round(a,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:40) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
while(i<size(x)):
	m=(x[i])**(-1)
	a=m/size(x)
	i+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:10) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
while(i<size(x)):
	m=(x[i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:11) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**-(1)
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:32) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**(-1)
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:17) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=[x([0])**(-1)]
while(i<size(x)):
	m+=m+[x([i])**(-1)]
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:47) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=[x([0])**(-1), dtype=float]
while(i<size(x)):
	m+=m+[x([i])**(-1)]
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
File "XXXX", line 6
    m=[x([0])**(-1), dtype=float]
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:16) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**(-1),
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:30) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**(-1),
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- EXECUTION TIME:
0.608281
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3123/main.py", line 6, in <module>
    m=x([0])**(-1),
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:30) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**(-1),
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:42) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x([0])**(-1)
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:52) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x[0]**(-1)
while(i<size(x)):
	m+=m+x([i])**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:58) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x[0]**(-1)
while(i<size(x)):
	m+=m+x[i]**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:21) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x[0]**(-1)
while(i<size(x)):
	m+=m+x[i]**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-07 18:27:45) 
-- CODE:
from numpy import*

x=array(eval(input("")))
i=0
co=0
m=x[0]**(-1)
while(i<size(x)):
	m+=m+x[i]**(-1)
	a=m/size(x)
	i+=1
	co+=1
print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
